--- a/UploadVideo/UploadVideo.entitlements
+++ b/UploadVideo/UploadVideo.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.net.thomasdye.TDS-docs</string>
+		<string>group.net.Nexora.TDS-docs</string>
 	</array>
 </dict>
 </plist>
